ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Account_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Country_Code__c</fullName>
    <description>Used for sharing rules, to pull the country ISO code to the Case, and leverage in Case Sharing Rules</description>
    <label>Account Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>