ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Account_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Account_State_Province__c</fullName>
    <description>To expose the Billing State/Province Code, to be leveraged in the Lightning Page elements</description>
    <formula>TEXT(Account.BillingStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account State/Province</label>
    <type>Text</type>
</CustomField>