ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/AccountAvailable__c.field-meta.xml
<CustomField>
    <fullName>AccountAvailable__c</fullName>
    <description>Created for Customer Service Implementation. This is a flag to indicate whether an account is associated to a case</description>
    <formula>IF(ISBLANK(AccountId), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Available</label>
    <type>Checkbox</type>
</CustomField>