ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Actual_Labor_Total__c.field-meta.xml
<CustomField>
    <fullName>Actual_Labor_Total__c</fullName>
    <description>CLAIMSV2-77. When the Total Labor Override Amount is not populated, Actual Labor Total will be equal to Suggested Labour Settlement, otherwise, it will be equal to Labor Override Amount</description>
    <formula>BLANKVALUE(Total_Labor_Override_Amount__c, Suggested_Labour_Settlement__c)</formula>
    <inlineHelpText>When the Total Labor Override Amount is not populated, Actual Labor Total will be equal to Suggested Labour Settlement, otherwise, it will be equal to Labor Override Amount</inlineHelpText>
    <label>Actual Labor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>