ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Actual_Labour_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Labour_Rate__c</fullName>
    <description>Labour rate actually applied on the build</description>
    <inlineHelpText>Override value for Labour Rate when required; setting this value (including to 0) will be used in suggested settlement calculations</inlineHelpText>
    <label>Actual Labour Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>