ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Actual_Labour_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Actual_Labour_Settlement__c</fullName>
    <description>Actual Labour Settlement to apply to the claim</description>
    <label>Actual Labour Settlement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>