ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/AdditionalCommentsForRoute__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCommentsForRoute__c</fullName>
    <description>Created for Customer Service to store additional comments related to Route To</description>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>