ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/All_Claim_Photos_Attached__c.field-meta.xml
<CustomField>
    <fullName>All_Claim_Photos_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that all photos required for the Claim are attached</description>
    <inlineHelpText>By checking this, you are confirming that all necessary photos for submitting this claim are attached to the Case</inlineHelpText>
    <label>All Claim Photos Attached?</label>
    <type>Checkbox</type>
</CustomField>