ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Alternate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the second owner contact for the warranty/claim process.</description>
    <label>Alternate Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>