ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Alternate_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Id__c</fullName>
    <description>ClaimsV2 295 Capture the Alternate Contact Id related to the Case - used mainly for Conga Queries</description>
    <formula>Alternate_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Capture the Alternate Contact Id related to the Case</inlineHelpText>
    <label>Alternate Contact Id</label>
    <type>Text</type>
</CustomField>