ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IKOL</fullName>
                <label>IKO Industries Ltd.</label>
            </value>
            <value>
                <fullName>IKOI</fullName>
                <label>IKO Industries Inc.</label>
            </value>
            <value>
                <fullName>IKOM</fullName>
                <label>IKO Manufacturing Inc.</label>
            </value>
            <value>
                <fullName>BLAIRI</fullName>
                <label>Blair Sales Inc.</label>
            </value>
            <value>
                <fullName>HYLOADI</fullName>
                <label>Hyload Sales Inc.</label>
            </value>
            <value>
                <fullName>CRCI</fullName>
                <label>CanRoof Corporation Inc.</label>
            </value>
            <value>
                <fullName>DECRA</fullName>
                <label>DECRA Roofing Systems, Inc.</label>
            </value>
            <value>
                <fullName>Blair</fullName>
                <isActive>false</isActive>
                <label>Blair</label>
            </value>
            <value>
                <fullName>CRC</fullName>
                <isActive>false</isActive>
                <label>CRC</label>
            </value>
            <value>
                <fullName>Hyload</fullName>
                <isActive>false</isActive>
                <label>Hyload</label>
            </value>
            <value>
                <fullName>IKO</fullName>
                <isActive>false</isActive>
                <label>IKO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>