ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Brand_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Short_Name__c</fullName>
    <description>Converts full brand name to shorter version for printing in documents.</description>
    <formula>CASE(Brand__c, 
&quot;CRCI&quot;, &quot;CRC&quot;,
&quot;IKOL&quot;, &quot;IKO&quot;,
&quot;IKOI&quot;, &quot;IKO&quot;,
&quot;IKOM&quot;, &quot;IKO&quot;,
&quot;BLAIRI&quot;,&quot;Blair&quot;, 
&quot;HYLOADI&quot;,&quot;Hyload&quot;, 
&quot;DECRA&quot;,&quot;Decra&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Short Name</label>
    <type>Text</type>
</CustomField>