ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Builder__c.field-meta.xml
<CustomField>
    <fullName>Builder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Builder for a Residential Account, Other, US Contractor</description>
    <label>Builder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Residential Account, Other, US Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Builder)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>