ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Bundle_Material_Value__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Material_Value__c</fullName>
    <description>Used for calculating the value of the bundle material for a settlement; this can be referenced in other formula fields or conga documents</description>
    <formula>IF(
    ISBLANK(Num_of_Bundles_for_Settlement__c),
    Suggested_Bundles_for_Settlement__c   *  Bundle_Rate__c,
    Num_of_Bundles_for_Settlement__c * Bundle_Rate__c
)</formula>
    <label>Bundle Material Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>