ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Bundle_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Rate__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Rate we use for payouts for bundle value</description>
    <label>Bundle Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>