ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Bundle_Rate_Cash_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Rate_Cash_Settlement__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Bundle rate used to calculate the Cash Settlement value</description>
    <inlineHelpText>Bundle rate used to calculate the Cash Settlement value</inlineHelpText>
    <label>Bundle Rate (Cash Settlement)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>