ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Bundle_Rate_Hand_Seal__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Rate_Hand_Seal__c</fullName>
    <description>Used for overriding the default Bundle Hand Seal Rate</description>
    <inlineHelpText>Used for overrides for the Hand Seal settlements; otherwise, defaults to $10</inlineHelpText>
    <label>Bundle Rate (Hand Seal Override)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>