ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Bundles_Causing_Concern__c.field-meta.xml
<CustomField>
    <fullName>Bundles_Causing_Concern__c</fullName>
    <description>Number of Bundles in the Claim causing concern</description>
    <inlineHelpText>Number of bundles related to the claim (not the overall installation); will be used to drive settlement calculations</inlineHelpText>
    <label># Bundles Causing Concern</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>