ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Bundles_Used__c.field-meta.xml
<CustomField>
    <fullName>Bundles_Used__c</fullName>
    <description>Number of Bundles used in the installation</description>
    <inlineHelpText>Number of Bundles used in the installation</inlineHelpText>
    <label># Bundles Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>