ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Calculated_Hand_Seal_Bundle_Rate__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Hand_Seal_Bundle_Rate__c</fullName>
    <description>Calculated hand seal bundle rate, if Bundle Rate Hand Seal is blank, then use Hand Seal Bundle Rate, otherwise, use Bundle Rate Hand Seal</description>
    <formula>BLANKVALUE(Bundle_Rate_Hand_Seal__c, Hand_Seal_Bundle_Rate__c)</formula>
    <inlineHelpText>Calculated hand seal bundle rate, if Bundle Rate Hand Seal is blank, then use Hand Seal Bundle Rate, otherwise, use Bundle Rate Hand Seal</inlineHelpText>
    <label>Calculated Hand Seal Bundle Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>