ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Calculated_Warranty_Percentage_Used__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Warranty_Percentage_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated through Warranty Tables (Custom Metadata)</description>
    <label>Calculated Warranty Percentage Used</label>
    <precision>13</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>