ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Call_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Received_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This is the date when the initial call to initiate the claim was received by IKO. It defaults to the case create date and user is able to change it.</description>
    <inlineHelpText>This date field is used for the initial date for the settlement calculation.</inlineHelpText>
    <label>Call Received Date</label>
    <type>Date</type>
</CustomField>