ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/CasePrioritySort__c.field-meta.xml
<CustomField>
    <fullName>CasePrioritySort__c</fullName>
    <description>Priority Score Sort used to filter the Case List views based on multiple fields (Priority Score and Create Date)</description>
    <formula>VALUE (
TEXT((99 - Priority_Score__c)) &amp; &quot;&quot; &amp; 
TEXT(YEAR(DATEVALUE (CreatedDate))) &amp; &quot;&quot; &amp; 
if (LEN(TEXT(MONTH(DATEVALUE (CreatedDate)))) &lt; 2, &quot;0&quot; &amp; TEXT(MONTH(DATEVALUE (CreatedDate))), TEXT(MONTH(DATEVALUE (CreatedDate)))) &amp; &quot;&quot; &amp; 
if (LEN(TEXT(DAY(DATEVALUE (CreatedDate)))) &lt; 2, &quot;0&quot; &amp; TEXT(DAY(DATEVALUE (CreatedDate))), TEXT(DAY(DATEVALUE (CreatedDate))))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Priority Score Sort</inlineHelpText>
    <label>CasePrioritySort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>