ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Cash_Value_of_Settlement_Bundles__c.field-meta.xml
<CustomField>
    <fullName>Cash_Value_of_Settlement_Bundles__c</fullName>
    <formula>Bundle_Rate_Cash_Settlement__c * IF(NOT(ISBLANK(Num_of_Bundles_for_Settlement__c)), Num_of_Bundles_for_Settlement__c , Suggested_Bundles_for_Settlement__c)</formula>
    <inlineHelpText>Calcualted based on the Actual # of Bundles for Settlement (if defined) or the Suggested # of Bundles</inlineHelpText>
    <label>Cash Value of Settlement Bundles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>