ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Cash_Value_of_Settlement_Bundles_w_Tax__c.field-meta.xml
<CustomField>
    <fullName>Cash_Value_of_Settlement_Bundles_w_Tax__c</fullName>
    <description>Calculates the Cash Value of the Bundles with Taxes, so this can be referenced in other fields or a Conga doc</description>
    <formula>IF(
    TEXT(Account.BillingCountryCode) = &apos;CA&apos;,
    IF(
        Taxes_Additive__c,
	Cash_Value_of_Settlement_Bundles__c * (1 + Tax_Rate__c + Secondary_Tax_Rate__c),
	(Cash_Value_of_Settlement_Bundles__c * (1 + Tax_Rate__c)) * (1 + Secondary_Tax_Rate__c)
    ),
    Cash_Value_of_Settlement_Bundles__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Value of Settlement Bundles w/ Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>