ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Claim_Approver_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_Approver_Id__c</fullName>
    <description>User Id of the Claim Approver; leveraged in Approval Process to assign Id to this field, which can then be used to set the ClaimsApprover__c lookup field</description>
    <label>Claim Approver Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>