ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <description>Claim Number assigned to the Claim; should never change. By default, will be assigned the value from the Generated_Claim_Number__c formula field, but may be use other values (e.g. imported from WCMS system)</description>
    <externalId>true</externalId>
    <label>Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>