ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Claim_Stage__c.field-meta.xml
<CustomField>
    <fullName>Claim_Stage__c</fullName>
    <description>Used to track the high level stages of the Claim</description>
    <label>Claim Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Awaiting Docs</fullName>
            </value>
            <value>
                <fullName>In Kankakee</fullName>
            </value>
            <value>
                <fullName>In Lab</fullName>
            </value>
            <value>
                <fullName>File Preparation</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>