ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Claim_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Claim_Sub_Stage__c</fullName>
    <label>Claim Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Claim_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting POP</fullName>
            </value>
            <value>
                <fullName>POP Received</fullName>
            </value>
            <value>
                <fullName>Additional POP Required</fullName>
            </value>
            <value>
                <fullName>Initial review</fullName>
            </value>
            <value>
                <fullName>HOIS sent</fullName>
            </value>
            <value>
                <fullName>Awaiting HOIS</fullName>
            </value>
            <value>
                <fullName>Awaiting Samples</fullName>
            </value>
            <value>
                <fullName>Samples Received</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>In Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>Info Required</fullName>
            </value>
            <value>
                <fullName>Info Requested</fullName>
            </value>
            <value>
                <fullName>Goodwill review</fullName>
            </value>
            <value>
                <fullName>In review</fullName>
            </value>
            <value>
                <fullName>Release Pending</fullName>
            </value>
            <value>
                <fullName>Waiting for Invoice</fullName>
            </value>
            <value>
                <fullName>Check/Credit Requested</fullName>
            </value>
            <value>
                <fullName>Check/Credit Approved</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Goodwill Requested</fullName>
            </value>
            <value>
                <fullName>Goodwill Rejected</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Samples Sent to Lab</fullName>
            </value>
            <value>
                <fullName>Dealer Invoice Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>