ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/ClaimApproved__c.field-meta.xml
<CustomField>
    <fullName>ClaimApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Claims Manager has approved the entire claim. This semi-closes the claim in the sense that changes should be minimal but there are still things to process. This is different than the &quot;Goodwill Amount Approve&quot; or &quot;Address Validation.&quot; A claim can have its goodwill amount approved but NOT but fully approved yet.</description>
    <label>Claim Approved?</label>
    <type>Checkbox</type>
</CustomField>