ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Claims_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Claims_Dollars__c</fullName>
    <label>Claims Dollars</label>
    <summarizedField>Payment_Request__c.Total_of_all_Items__c</summarizedField>
    <summaryForeignKey>Payment_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>