ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Claims_Response_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Claims_Response_Sent_Date__c</fullName>
    <description>The date when Claims team sends a response to the Claimant.</description>
    <label>Claims Response Sent Date</label>
    <type>Date</type>
</CustomField>