ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/ClaimsApprover__c.field-meta.xml
<CustomField>
    <fullName>ClaimsApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Claims Manager who approved the Claim</description>
    <label>Claims Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>