ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Close_Date_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_for_Reporting__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-63
Populate it with Case Closed Date when the Case is Closed and the Status Date Claim Open is populated</description>
    <inlineHelpText>Close Date for Reporting</inlineHelpText>
    <label>Close Date for Reporting</label>
    <type>DateTime</type>
</CustomField>