ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Completed_Claims_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Claims_Response_Time__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-63
measure the total time from the HOIS Received Date OR the first time it enters File Prep/Data Entry to the First Time Case is Closed after the HOIS Received Date OR the first time it enters File Prep/Data Entry less the time it was waiting with the customer</description>
    <inlineHelpText>Measure total time from HOIS Received Date OR first time it enters File Prep/Data Entry to First Time Case is Closed after HOIS Received Date OR first time it enters File Prep/Data Entry less time it was waiting with the customer</inlineHelpText>
    <label>Completed Claims Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>