ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Account_Parent__c.field-meta.xml
<CustomField>
    <fullName>Conga_Account_Parent__c</fullName>
    <formula>Account.Parent.Name</formula>
    <label>Conga Account Parent</label>
    <type>Text</type>
</CustomField>