ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Alternate_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Conga_Alternate_Contact_Name__c</fullName>
    <formula>Alternate_Contact__r.FirstName + &quot; &quot; +  Alternate_Contact__r.LastName</formula>
    <label>Conga Alternate Contact Name</label>
    <type>Text</type>
</CustomField>