ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Bundles__c.field-meta.xml
<CustomField>
    <fullName>Conga_Bundles__c</fullName>
    <formula>IF(NOT(ISBLANK(Num_of_Bundles_for_Settlement__c)),  Num_of_Bundles_for_Settlement__c ,  Suggested_Bundles_for_Settlement__c )</formula>
    <label>Conga Bundles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>