ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Cash_Settlement_Total__c.field-meta.xml
<CustomField>
    <fullName>Conga_Cash_Settlement_Total__c</fullName>
    <description>Cash Settlement Calculation:
- If Total Final Settlement Cost is populated, then use Total Final Settlement Cost;
- else (if the Actual # of bundles for settlement is populated then Settlement Total (Pre-tax) = (Actual # of bundles for settlement * Bundle Rate (Cash Settlement)) + Actual Labor Total
- else Suggested # Bundles for Settlement * Bundle Rate (Cash Settlement) + Actual Labor Total</description>
    <formula>IF( NOT( ISBLANK( Settlement_Amount__c ) ) , 
	Settlement_Amount__c , 
	IF( NOT( ISBLANK( Num_of_Bundles_for_Settlement__c ) ) , 
		Num_of_Bundles_for_Settlement__c * Bundle_Rate_Cash_Settlement__c + Actual_Labor_Total__c , 
		Suggested_Bundles_for_Settlement__c * Bundle_Rate_Cash_Settlement__c + Actual_Labor_Total__c) 
)</formula>
    <label>Conga: Cash Settlement Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>