ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Checked_Address__c.field-meta.xml
<CustomField>
    <fullName>Conga_Checked_Address__c</fullName>
    <formula>&quot;Case # &quot;&amp; CaseNumber &amp; &quot;- &quot; &amp; Account.BillingStreet &amp; &quot; &quot; &amp; Account.BillingCity &amp; &quot;, &quot; &amp; Account.BillingState &amp; &quot; &quot; &amp; Account.BillingPostalCode</formula>
    <label>Conga Checked Address</label>
    <type>Text</type>
</CustomField>