ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Contact_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Conga_Contact_Address_City__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Account.ParentId)),
	(
        Account.Parent.BillingCity 
	),
	IF(
		NOT(ISBLANK(Contact.MailingStreet)),
		(
			Contact.MailingCity
		),
		(
			Account.BillingCity 
		)
	)
)</formula>
    <label>Conga Contact Address City</label>
    <type>Text</type>
</CustomField>