ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Contact_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Conga_Contact_Address_Postal_Code__c</fullName>
    <formula>IF( 
NOT(ISBLANK(Account.ParentId)), 
( 
Account.Parent.BillingPostalCode
), 
IF( 
NOT(ISBLANK(Contact.MailingStreet)), 
( 
Contact.MailingPostalCode 
), 
( 
Account.BillingPostalCode 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Contact Address Postal Code</label>
    <type>Text</type>
</CustomField>