ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Contact_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Conga_Contact_Address_State__c</fullName>
    <formula>IF( 
NOT(ISBLANK(Account.ParentId)), 
( 
TEXT(Account.Parent.BillingStateCode) 
), 
IF( 
NOT(ISBLANK(Contact.MailingStreet)), 
( 
TEXT(Contact.MailingStateCode) 
), 
( 
TEXT(Account.BillingStateCode) 
) 
) 
)</formula>
    <label>Conga Contact Address State</label>
    <type>Text</type>
</CustomField>